# oBabel_pi

./: CMakeLists.txt  CMakeLists.txt.bak  Plugin.cmake  README.md
cmake/: TemplateVersion
data/: obabel.tif
flatpak/: org.opencpn.OpenCPN.Plugin.obabel.yaml
po/: POTFILES.in  el_GR.po  pl.po  pl_PL.po  ru.po
src/: icons.cpp  icons.h  obabelOverlayFactory.cpp  obabelOverlayFactory.h  obabelUIDialog.cpp  obabelUIDialog.h  obabelUIDialogBase.cpp  obabelUIDialogBase.h  obabel_pi.cpp  obabel_pi.h
